--- a/MovieStoreMvc/Views/Home/Index.cshtml
+++ b/MovieStoreMvc/Views/Home/Index.cshtml
@@ -1,40 +1,40 @@
-﻿@model MovieStoreMvc.Models.DTO.MovieListVm
+﻿@model MovieStoreMvc.Models.DTO.DieuLuatListVm
 @{
     Layout = "_Layout";
 }
 <section class="search-bar">
     <form method="get" asp-action="Index">
         <input type="text" name="term" placeholder="search here">
-        <button type="submit"><i class="fa fa-search"></i></button>
-        <a class="btn btn-default" href="/Home/Index">All</a>
+        <button type="submit">
+            <i class="fa fa-search"></i>
+        </button>
     </form>
 </section>
-<section class="movies">
-    @foreach(var movie in Model.MovieList){
-        <div class="movie-card" onclick="window.location.href='/Home/MovieDetail?movieId=@movie.Id'">
-        <div class="movie-image">
-            <img src="/Uploads/@movie.MovieImage">
-        </div>
-        <div class="movie-info">
-            <h4>@movie.Title</h4>
-                <h4>@movie.GenreNames</h4>
-                <h4>@movie.ReleaseYear</h4>
-           @* <h4>Cast : @movie.Cast</h4>
-            <h4>Director : @movie.Director</h4>*@
-        </div>
-    </div>
+<section class="movies list-group">
+    @foreach (var movie in Model.MovieList)
+    {
+        <li class="list-group-item" onclick="window.location.href='/Home/MovieDetail?movieId=@movie.Id'">
+            <div class="movie-info">
+                <h4>@movie.Name</h4>
+                <p>Chương mục: @movie.ChuongMucNames</p>
+                <p>Ban hành năm: @movie.ReleaseYear</p>
+            </div>
+         
+        </li>
     }
 </section>
 
 <div class="pagination">
-    @for(int i=1;i<=Model.TotalPages;i++){
-        if(i==Model.CurrentPage){
+    @for (var i = 1; i <= Model.TotalPages; i++)
+    {
+        if (i == Model.CurrentPage)
+        {
             <a href="/Home/Index?currentPage=@i&term=@Model.Term" class="active">@i</a>
         }
-        else{
+        else
+        {
             <a href="/Home/Index?currentPage=@i&term=@Model.Term">@i</a>
-
         }
     }
-   
+
 </div>
