--- a/MovieStoreMvc/Views/Shared/_Layout.cshtml
+++ b/MovieStoreMvc/Views/Shared/_Layout.cshtml
@@ -7,32 +7,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie store</title>
+    <title>Luật rừng.com</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/forms.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="/images/movie_filter_FILL0_wght400_GRAD0_opsz48.svg">
-    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="nav-bar">
-        <div class="logo">
-            movie store
-        </div>
+        <a class="logo" href="/Home/Index">
+            Luật rừng.com
+        </a>
         <ul class="nav-link">
             <li><a class="active" href="/Home/Index">Home</a></li>
-            <li><a href="/Home/About">About</a></li>
             @if (!string.IsNullOrEmpty(username))
             {
                 <li>
                     <a href="#">Admin <i class="fa fa-caret-down"></i></a>
 
                     <ul class="dropdown-nav-link">
-                        <li><a href="/Genre/Add">Genre</a></li>
-                        <li><a href="/Movie/Add">Movie</a></li>
+                        <li><a href="/ChuongMuc/ChuongMucList">Chương mục</a></li>
+                        <li><a href="/DieuLuat/Add">Điều luật</a></li>
                         <li><a href="/UserAuthentication/Logout">Logout</a></li>
                     </ul>
                 </li>
@@ -44,10 +44,11 @@
         </ul>
     </nav>
     <div class="container">
-       @RenderBody()
+        @RenderBody()
     </div>
+    @RenderSection("scripts", required: false)
     <footer>
-        &#169; 2022 Ravindra Devrani
+        &#169; Nhóm 3 môn lập trình C#
     </footer>
 </body>
 </html>
